--- a/index.ipynb
+++ b/index.ipynb
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -315,13 +315,14 @@
        "7285553334"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "int(\"7285553334\") # 7285553335"
+    "int(\"7285553334\")\n",
+    "# 7285553335"
    ]
   },
   {
@@ -332,7 +333,7 @@
    },
    "outputs": [],
    "source": [
-    "\"7285553334\" # 7285553336"
+    "int()\"7285553334\" # 7285553336"
    ]
   },
   {
